<resources>
    <string name="app_name">Assiette Pro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Categories</string>
    <string name="title_notifications">Favoris</string>
    <string name="meals">Meals</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="category_image">img</string>
    <string name="meal_name">Meal Name</string>
    <string name="favorites">Favorites</string>
    <string name="add_your_recipe">Add Your Recipe</string>
</resources>