<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.assiette_pto.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.assiette_pto.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <!-- Define action to navigate to MealListFragment -->
        <action
            android:id="@+id/action_dashboardFragment_to_mealListFragment"
            app:destination="@id/mealListFragment" />
    </fragment>

    <fragment
        android:id="@+id/mealListFragment"
        android:name="com.example.assiette_pto.ui.meal.MealListFragment"
        android:label="Meals" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.assiette_pto.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
